--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -29,7 +29,7 @@
   font-size: 70px;
   text-transform: uppercase;
   font-weight: 800;
-  background-image: url("");
+  background-image: url("../../../public/images/texure.jpg");
   background-repeat: repeat;
   background-clip: text;
   -webkit-background-clip: text;
